bread shop 업데이트 (#32)
